wv_prep finished

--- a/etc/wv_process.config
+++ b/etc/wv_process.config
@@ -1,17 +1,11 @@
 %PROCESS CONFIG FILE
 %WHAT: controls the input parameters of the wv_process module
 %
-local_src       0
+local_dest_flag 0
 %
-local_src_path  /WeatherShare/odimh5_archive/
+local_dest_root /WeatherShare/proc_archive/
 %
-s3_src_path     s3://roames-wxradar-archive/odimh5_archive/
-%
-local_dest      0
-%
-local_dest_path /WeatherShare/proc_archive/
-%
-s3_dest_path    s3://roames-wxradar-archive/proc_archive/
+s3_dest_root    s3://roames-wxradar-archive/proc_archive/
 %
 realtime_flag    1
 %description: controls process mode:
@@ -22,17 +16,20 @@ realtime_offset -2
 %-nn : offset time in hours from now for realtime
 %note: realtime_newest is set to now
 %
-hist_oldest      01-01-1997_00:00
-%dd-mm-yy_HH:MM : oldest time to process
-hist_newest      30-06-2016_23:50
-%dd-mm-yy_HH:MM : newest time to process
+hist_oldest      01-01-1997
+%dd-mm-yy : oldest time to process
+hist_newest      30-06-2016
+%dd-mm-yy : newest time to process
 %
-site_no         all
+radar_id_list    2
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
-%Option (2)  nn,nn: Site number list seperated by commas 
+%Option (2)    ##: single number
 %
 era_interim_path /WeatherShare/era_interim_radar_1997-201606/
 %description:  processed era-interim path for historical processing
-
+%
+%dynamodb table name
+odimh5_ddb_table  wxradar-odimh5-index
+storm_ddb_table   wxradar-storm-index
