--- a/wv_prep/config
+++ b/wv_prep/config
@@ -20,3 +20,6 @@ ftp_path        register/bom517/benAWrij4/radar
 %
 %oldest filename to keep in ftp_latest_vol.mat
 ftp_oldest      -30
+%
+%dynamodb table name
+odimh5_ddb_table wxradar-odimh5-index
