era_int processing and json work

--- a/etc/wv_process.config
+++ b/etc/wv_process.config
@@ -7,7 +7,7 @@ local_dest_root /WeatherShare/proc_archive/
 %
 s3_dest_root    s3://roames-wxradar-archive/proc_archive/
 %
-realtime_flag    1
+realtime_flag    0
 %description: controls process mode:
 %Realtime: uses ftp index (.h5), realtime GFS forecast temp data and loops
 %Historical: generates own odimh5 list (.h5.tar), uses ERA-Intrim data and does not loop
@@ -16,12 +16,12 @@ realtime_offset -2
 %-nn : offset time in hours from now for realtime
 %note: realtime_newest is set to now
 %
-hist_oldest      01-01-1997
-%dd-mm-yy : oldest time to process
-hist_newest      30-06-2016
-%dd-mm-yy : newest time to process
+hist_oldest      2016_09_25
+%yyyy_mm_dd : oldest time to process
+hist_newest      2016_09_25
+%yyyy_mm_dd : newest time to process
 %
-radar_id_list    2
+radar_id_list    50
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
@@ -33,3 +33,5 @@ era_interim_path /WeatherShare/era_interim_radar_1997-201606/
 %dynamodb table name
 odimh5_ddb_table  wxradar-odimh5-index
 storm_ddb_table   wxradar-storm-index
+eraint_ddb_table  wxradar-eraint-fzlvl
+	
