wv_kml almost finished, general patches

--- a/etc/global.config
+++ b/etc/global.config
@@ -62,7 +62,12 @@ high_maxLodPixels     -1          %upper limit on number of pixels an object sca
 r_tfmt                yyyymmdd_HHMMSS            %s3 database date format
 ddb_tfmt              yyyy-mm-ddTHH:MM:SS        %ddb date format
 ge_tfmt               yyyy-mm-ddTHH:MM:SSZ       %Google's date format
+%
+%GLOBAL SCALING FACTOR
+stats_scale           10                        %number to divide stats by before rounding
+geo_scale             10000                     %number to divide geo by before rounding
+r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
 %dynamodb table name
-odimh5_ddb_table      wxradar-odimh5-index
+odimh5_ddb_table      wxradar_odimh5_index
 storm_ddb_table       wxradar_storm_index
 eraint_ddb_table      wxradar-eraint-fzlvl
