wv_process stable

--- a/etc/global.config
+++ b/etc/global.config
@@ -49,6 +49,8 @@ fcst_step             5           %length of steps in minutes
 n_fcst_steps          6           %number of forecast steps
 min_fcst_cells        3           %minimum of unique cells for forecast generation
 max_hist_cells        4           %maximum number of previous timesteps from history to use for forecast generation
+nowcast_growth        1.1         %growth rate of nowcast ellipses
+axis_scaling          1           %nowcast axis scaling
 %
 %REGIONATION OPTIONS
 overlay_minLodPixels  50          %lower limit on number of pixels an object scales to for overlay region
