--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -19,9 +19,9 @@ xsec_levels           [1,5]      %vol_grid z levels index to produce x-sections 
 %
 % HISTORICAL
 %
-hist_oldest      2005_11_27T04:00
+hist_oldest      2005-11-27T04:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2005_11_27T06:00
+hist_newest      2005-11-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %
@@ -33,7 +33,7 @@ radar_id_list    50
 %Option (3)    vector
 %
 %
-options         [1,0,0,0,1,0,1,0,1,1,0,1,1]
+options         [0,1,0,0,1,0,1,1,1,1,1,1,1]
 %description (T/F):
 %Entry (1) scan 1 refl kml object
 %Entry (2) scan 2 refl kml object
