stable process and new utils

--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -13,19 +13,22 @@ s3_dest_root    s3://roames-wxradar-archive/realtime_kml/
 overlays_path         overlays/
 vol_data_path         vol_data/
 storm_data_path       storm_data/
-coverage_range        200        %coverage rings distance in km
+coverage_range        150        %coverage rings distance in km
 max_vis_trck_length   20         %length of storm track colormap
 xsec_levels           [1,5]      %vol_grid z levels index to produce x-sections for
 %
 % HISTORICAL
 %
-hist_oldest      2009-02-07T07:10:00
+hist_oldest      2015-12-15T22:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2009-02-07T09:00:00
+hist_newest      2015-12-15T23:59:59
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %
-radar_id_list    02
+realtime_kml     0
+%
+%
+radar_id_list    54
 %site description
 %overrides the zone setting
 %Option (1)    all
