realtime staging ddb and moving wv kml

--- a/etc/global.config
+++ b/etc/global.config
@@ -26,7 +26,7 @@ ewt_min_hlevel         3           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
 ewt_del                1           %Quantisation refl scaling 
-ewt_saliency           25          %min areal extent threshold (km) DEFAULT 20, was 15
+ewt_saliency           30          %min areal extent threshold (km) DEFAULT 20, was 15
 ewt_kernel_size        9           %smoothing kernel (pixels)
 ewt_max_depth          10          %maximum hlevel depth search (units of Q) DEFAULT 10
 ewt_refl_h             4           %level to extract refl data from vol (h)
@@ -40,7 +40,7 @@ min_track_len         2           %minimum track history used for projecting cen
 min_other_track_cells 3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
 max_track_len         4           %maximum track history used for projecting centroid in wdss_tracking
 max_storm_speed       80          %maximum speed of a storm, used to check tracking cell search radius (km/h)
-azi_diff              50          %maximum allowable difference between the proj_azi and the tracked azi (deg)
+azi_diff              90          %maximum allowable difference between the proj_azi and the tracked azi (deg)
 %
 %FORECASTING OPTIONS
 track_merge_t_offset   15         %the max time offset from the start/end of a day to find start/end cells for merging
@@ -73,3 +73,4 @@ r_scale               10                        %number to divide radar data obj
 odimh5_ddb_table      wxradar_odimh5_index
 storm_ddb_table       wxradar_storm_index
 eraint_ddb_table      wxradar-eraint-fzlvl
+staging_ddb_table     wxradar_realtime_staging
