--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -5,7 +5,7 @@ local_src_flag  0
 local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
-local_dest_flag 1
+local_dest_flag 0
 local_dest_root /WeatherShare/realtime_kml/
 s3_dest_root    s3://roames-wxradar-archive/realtime_kml/
 %
@@ -19,16 +19,19 @@ xsec_levels           [1,5]      %vol_grid z levels index to produce x-sections 
 %
 % HISTORICAL
 %
-hist_oldest      2015-12-15T22:00:00
+hist_oldest      2015-12-15T20:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
 hist_newest      2015-12-15T23:59:59
 %yyyy_mm_ddTHH:MM : newest time to process
 %
+% REALTIME
 %
-realtime_kml     0
+realtime_kml     1
+%
+realtime_length  -1          %hours
 %
 %
-radar_id_list    54
+radar_id_list    all
 %site description
 %overrides the zone setting
 %Option (1)    all
