--- a/wv_process/etc/process.config
+++ b/wv_process/etc/process.config
@@ -13,7 +13,7 @@ local_dest_root /WeatherShare/storm_archive/
 %
 s3_dest_root    s3://roames-wxradar-archive/storm_archive/
 %
-realtime_flag    0
+realtime_flag    1
 %description: controls process mode:
 %Realtime: uses ftp index (.h5), realtime GFS forecast temp data and loops
 %Historical: generates own odimh5 list (.h5.tar), uses ERA-Intrim data and does not loop
@@ -29,7 +29,7 @@ hist_oldest      2015_12_15
 hist_newest      2015_12_15
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    54
+radar_id_list    all
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
