--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -6,13 +6,17 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 local_dest_flag 0
-local_dest_root /WeatherShare/realtime_kml/
-s3_dest_root    s3://roames-wxradar-archive/realtime_kml/
+local_dest_root /WeatherShare/kml_realtime/
+s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
+s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
+%
+download_path   /tmp/h5_download/
 %
 %KML FILE STRUCTURE OPTIONS
 overlays_path         overlays/
-vol_data_path         vol_data/
-storm_data_path       storm_data/
+scan_obj_path         scan_obj/
+track_obj_path        track_obj/
+cell_obj_path         cell_obj/
 coverage_range        150        %coverage rings distance in km
 max_vis_trck_length   20         %length of storm track colormap
 xsec_levels           [1,5]      %vol_grid z levels index to produce x-sections for
