--- a/etc/global.config
+++ b/etc/global.config
@@ -19,6 +19,8 @@ outer_iso_faces        2000        %maximum total number of face for the outer_i
 inner_iso_faces        2000        %maximum number of total faces for an inner iso object
 inner_iso_percentile   95          %percentile pf dBZ for inner isosurface
 low_res_iso_factor     .25         %low res face reduction factor
+inner_alpha            0           %alpha for inner collada isosurface
+outer_alpha            0.5         %alpha for outer collada isosurface
 %
 %IDENTIFCATION OPTIONS
 cart_erode_radius      1           %eroision radius for cart_interpol6 significant convection identification
@@ -53,12 +55,15 @@ nowcast_growth        1.05        %growth rate of nowcast ellipses
 axis_scaling          1           %nowcast axis scaling
 %
 %REGIONATION OPTIONS
-overlay_minLodPixels  50          %lower limit on number of pixels an object scales to for overlay region
-overlay_maxLodPixels  -1          %upper limit on number of pixels an object scales to for overlay region
+ppi_minLodPixels      50          %lower limit on number of pixels an object scales to for ppi region
+ppi_maxLodPixels      -1          %upper limit on number of pixels an object scales to for ppi region
+track_minLodPixels    150         %lower limit on number of pixels an object scales to for track region
+track_maxLodPixels    -1          %upper limit on number of pixels an object scales to for track region
 low_minLodPixels      50          %lower limit on number of pixels an object scales to for low res region
 low_maxLodPixels      300         %upper limit on number of pixels an object scales to for low res region
 high_minLodPixels     300         %lower limit on number of pixels an object scales to for high res region
 high_maxLodPixels     -1          %upper limit on number of pixels an object scales to for high res region
+max_ge_alt            20000       %upper limit for ge alt in networklinks      
 %
 %DATE FORMAT OPTIONS
 r_tfmt                yyyymmdd_HHMMSS            %s3 database date format
