--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -5,12 +5,13 @@ local_src_flag  0
 local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
-local_dest_flag 0
+local_dest_flag 1
 local_dest_root /WeatherShare/kml_realtime/
 s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 download_path   /tmp/h5_download/
+
 %
 %KML FILE STRUCTURE OPTIONS
 overlays_path         overlays/
@@ -19,31 +20,31 @@ track_obj_path        track_obj/
 cell_obj_path         cell_obj/
 coverage_range        150        %coverage rings distance in km
 max_vis_trck_length   20         %length of storm track colormap
-xsec_levels           [1,5]      %vol_grid z levels index to produce x-sections for
+xsec_alt              [3000,6000]      %xsection altitude in m
 %
 % HISTORICAL
 %
-hist_oldest      2015-12-15T20:00:00
+hist_oldest      2014-11-27T04:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2015-12-15T23:59:59
+hist_newest      2014-11-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME
 %
-realtime_kml     1
-%
+realtime_kml     0
+static_flag      0
 realtime_length  -1          %hours
 %
 %
-radar_id_list    all
+radar_id_list    50
 %site description
 %overrides the zone setting
 %Option (1)    all
 %Option (2)    single number
 %Option (3)    vector
 %
-%                1 2 3 4 5 6 7 8 9 0 1 2 3
-options         [0,1,0,0,0,0,1,1,1,1,0,1,0]
+%                1 2 3 4 5 6 7 8 9 0 1 2
+options         [0,1,0,0,0,0,1,1,1,1,0,1]
 %description (T/F):
 %Entry (1)  scan 1 refl kml object
 %Entry (2)  scan 2 refl kml object
@@ -57,6 +58,4 @@ options         [0,1,0,0,0,0,1,1,1,1,0,1,0]
 %Entry (10) tracks path kml object
 %Entry (11) swaths kml object
 %Entry (12) nowcast swaths kml objects
-%Entry (13) priority radar selection   
-
 
