--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -5,13 +5,16 @@ local_src_flag  0
 local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
-local_dest_flag 1
+local_dest_flag 0
 local_dest_root /WeatherShare/kml_realtime/
+%s3_dest_root    s3://roames-wxradar-kml/kml_demo/
+%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 download_path   /tmp/h5_download/
-
+rebuild_root    0
+reload_vars     1
 %
 %KML FILE STRUCTURE OPTIONS
 overlays_path         overlays/
@@ -24,19 +27,19 @@ xsec_alt              [3000,6000]      %xsection altitude in m
 %
 % HISTORICAL
 %
-hist_oldest      2014-11-27T04:00:00
+hist_oldest      2005-11-27T04:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2014-11-27T06:00:00
+hist_newest      2005-11-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME
 %
-realtime_kml     0
+realtime_kml     1
 static_flag      0
 realtime_length  -1          %hours
 %
 %
-radar_id_list    50
+radar_id_list    all
 %site description
 %overrides the zone setting
 %Option (1)    all
