--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -1,44 +1,39 @@
 %KML CONFIG FILE
 %WHAT: controls the input parameters of the KML config module
 %
+% SOURCE OPTIONS
 local_src_flag  0
 local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
+% DESTINATION OPTIONS
 local_dest_flag 0
 local_dest_root /WeatherShare/kml_realtime/
-%s3_dest_root    s3://roames-wxradar-kml/kml_demo/
-%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
-download_path   /tmp/h5_download/
-rebuild_root    0
-reload_vars     1
+% RESTART OPTIONS
+save_object_struct    1                  %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
 %
-%KML FILE STRUCTURE OPTIONS
+%FILE STRUCTURE OPTIONS
 overlays_path         overlays/
 scan_obj_path         scan_obj/
 track_obj_path        track_obj/
 cell_obj_path         cell_obj/
-coverage_range        150        %coverage rings distance in km
-max_vis_trck_length   20         %length of storm track colormap
-xsec_alt              [3000,6000]      %xsection altitude in m
+download_path         /tmp/h5_download/
 %
-% HISTORICAL
-%
-hist_oldest      2005-11-27T04:00:00
+% HISTORICAL OPTIOS
+hist_oldest      2014-11-27T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2005-11-27T06:00:00
+hist_newest      2014-11-27T06:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
-% REALTIME
-%
+% REALTIME OPTIONS
 realtime_kml     1
-static_flag      0
 realtime_length  -1          %hours
 %
 %
+%SITE OPTIONS
 radar_id_list    all
 %site description
 %overrides the zone setting
@@ -46,6 +41,21 @@ radar_id_list    all
 %Option (2)    single number
 %Option (3)    vector
 %
+%REGIONATION OPTIONS
+ppi_minLodPixels      50          %lower limit on number of pixels an object scales to for ppi region
+ppi_maxLodPixels      -1          %upper limit on number of pixels an object scales to for ppi region
+track_minLodPixels    150         %lower limit on number of pixels an object scales to for track region
+track_maxLodPixels    -1          %upper limit on number of pixels an object scales to for track region
+iso_minLodPixels      50          %lower limit on number of pixels an object scales to for isosurface
+iso_maxLodPixels      -1          %upper limit on number of pixels an object scales to for isosurface
+max_ge_alt            20000       %upper limit for ge alt in networklinks    
+%
+%KML OPTIONS
+coverage_range        150               %coverage rings distance in km
+max_vis_trck_length   20                %length of storm track colormap
+xsec_alt              [3000,6000]       %xsection altitude in m
+%
+% KML LAYER OPTIONS
 %                1 2 3 4 5 6 7 8 9 0 1 2
 options         [0,1,0,0,0,0,1,1,1,1,0,1]
 %description (T/F):
@@ -61,4 +71,3 @@ options         [0,1,0,0,0,0,1,1,1,1,0,1]
 %Entry (10) tracks path kml object
 %Entry (11) swaths kml object
 %Entry (12) nowcast swaths kml objects
-
