--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -8,9 +8,11 @@ s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
 local_dest_flag 0
-local_dest_root /WeatherShare/kml_realtime/
-s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
-s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
+local_dest_root /WeatherShare/kml_demo/
+s3_dest_root    s3://roames-wxradar-kml/kml_demo/
+s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
+%s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
+%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 % RESTART OPTIONS
 save_object_struct    1                  %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
@@ -23,18 +25,18 @@ cell_obj_path         cell_obj/
 download_path         /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest      2014-11-27T05:00:00
+hist_oldest      2014-11-27T04:30:00
 %yyyy_mm_ddTHH:MM : oldest time to process
 hist_newest      2014-11-27T06:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
-realtime_kml     1
+realtime_kml     0
 realtime_length  -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list    all
+radar_id_list    66
 %site description
 %overrides the zone setting
 %Option (1)    all
