removing scan images from archive and generating them from odimh5 on demand

--- a/etc/global.config
+++ b/etc/global.config
@@ -11,7 +11,8 @@ min_dbz                 -32        %min negative of dbz values to set to transpa
 max_dbz                 96         %max of dbz values (128-32)
 min_vel                 -71        %min vel value to set to transparent
 max_vel                 70         %max of vel values
-min_n_groups            4           %minimum number of groups in a h5 file to contiune pass QA
+min_n_groups            4          %minimum number of groups in a h5 file to contiune pass QA
+sig_refl_sweep          2          %ppi sweep number for checking for sig refl
 %
 %ISOSURFACE OPTIONS
 smallest_no_faces      6           %lowest number of faces for an isosurface
