--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -7,8 +7,8 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 0
-local_dest_root /WeatherShare/kml_demo/
+local_dest_flag 1
+local_dest_root /WeatherShare/kml_uqxpol_demo/
 s3_dest_root    s3://roames-wxradar-kml/kml_demo/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 %s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
@@ -25,9 +25,9 @@ cell_obj_path         cell_obj/
 download_path         /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest      2014-11-27T04:30:00
+hist_oldest      2016-11-08T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2014-11-27T06:30:00
+hist_newest      2016-11-08T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
@@ -36,7 +36,7 @@ realtime_length  -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list    66
+radar_id_list    99
 %site description
 %overrides the zone setting
 %Option (1)    all
@@ -56,20 +56,20 @@ max_ge_alt            20000       %upper limit for ge alt in networklinks
 coverage_range        150               %coverage rings distance in km
 max_vis_trck_length   20                %length of storm track colormap
 xsec_alt              [3000,6000]       %xsection altitude in m
+ppi_sweep             1                 %starting from 1st sweep = 1
+ppi_dbz_mask          30                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
 %
 % KML LAYER OPTIONS
-%                1 2 3 4 5 6 7 8 9 0 1 2
-options         [0,1,0,0,0,0,1,1,1,1,0,1]
+%                1 2 3 4 5 6 7 8 9 10
+options         [0,1,0,0,1,1,1,1,0,1]
 %description (T/F):
-%Entry (1)  scan 1 refl kml object
-%Entry (2)  scan 2 refl kml object
-%Entry (3)  scan 1 vel kml object
-%Entry (4)  scan 2 vel kml object
-%Entry (5)  Refl xsec kml object
-%Entry (6)  Vel xsec kml object
-%Entry (7)  inner isosurface kml object
-%Entry (8)  outer isosurface kml object
-%Entry (9)  storm stats balloon object
-%Entry (10) tracks path kml object
-%Entry (11) swaths kml object
-%Entry (12) nowcast swaths kml objects
+%Entry (1)  PPI refl kml layer
+%Entry (2)  PPI vel kml layer
+%Entry (3)  Refl xsec kml object
+%Entry (4)  Vel xsec kml object
+%Entry (5)  inner isosurface kml object
+%Entry (6)  outer isosurface kml object
+%Entry (7)  storm stats balloon object
+%Entry (8) tracks path kml object
+%Entry (9) swaths kml object
+%Entry (10) nowcast swaths kml objects
