minor changes to config files

--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -7,8 +7,8 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 0
-local_dest_root /WeatherShare/kml_demo/
+local_dest_flag 1
+local_dest_root /WeatherShare/kml_demo_20161113/
 s3_dest_root    s3://roames-wxradar-kml/kml_demo/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 %s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
@@ -25,9 +25,9 @@ cell_obj_path         cell_obj/
 download_path         /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest      2014-11-27T04:30:00
+hist_oldest      2016-11-13T07:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2014-11-27T06:30:00
+hist_newest      2016-11-13T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
