--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -7,12 +7,12 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 1
-local_dest_root /WeatherShare/kml_demo_20161113/
-s3_dest_root    s3://roames-wxradar-kml/kml_demo/
-s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
-%s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
-%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
+local_dest_flag 0S
+local_dest_root /WeatherShare/kml_realtime/
+%s3_dest_root    s3://roames-wxradar-kml/kml_demo/
+%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
+s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
+s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 % RESTART OPTIONS
 save_object_struct    1                  %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
@@ -31,12 +31,12 @@ hist_newest      2016-11-13T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
-realtime_kml     0
+realtime_kml     1
 realtime_length  -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list    66
+radar_id_list    all
 %site description
 %overrides the zone setting
 %Option (1)    all
