--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -7,7 +7,7 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 0S
+local_dest_flag 0
 local_dest_root /WeatherShare/kml_realtime/
 %s3_dest_root    s3://roames-wxradar-kml/kml_demo/
 %s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
