moving towards new data model, temp changes

--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -2,9 +2,11 @@
 %WHAT: controls the input parameters of the KML config module
 %
 % SOURCE OPTIONS
-local_src_flag  0
-local_src_root /WeatherShare/storm_archive/
-s3_src_root    s3://roames-wxradar-archive/storm_archive/
+local_src_flag           0
+local_odimh5_src_root    /WeatherShare/odimh5_archive/
+local_stormh5_src_root   /WeatherShare/storm_archive/
+s3_odimh5_src_root       s3://roames-wxradar-archive/odimh5_archive/
+s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
 local_dest_flag 1
