--- a/wv_kml/etc/kml.config
+++ b/wv_kml/etc/kml.config
@@ -7,8 +7,8 @@ local_src_root /WeatherShare/storm_archive/
 s3_src_root    s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 0
-local_dest_root /WeatherShare/kml_demo/
+local_dest_flag 1
+local_dest_root /WeatherShare/kml_demo_uqxpol2/
 s3_dest_root    s3://roames-wxradar-kml/kml_demo/
 s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 %s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
@@ -25,9 +25,9 @@ cell_obj_path         cell_obj/
 download_path         /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest      2014-11-27T04:30:00
+hist_oldest      2016-11-08T04:30:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2014-11-27T06:30:00
+hist_newest      2016-11-08T05:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
@@ -36,7 +36,7 @@ realtime_length  -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list    66
+radar_id_list    99
 %site description
 %overrides the zone setting
 %Option (1)    all
@@ -59,7 +59,7 @@ xsec_alt              [3000,6000]       %xsection altitude in m
 %
 % KML LAYER OPTIONS
 %                1 2 3 4 5 6 7 8 9 0 1 2
-options         [0,1,0,0,0,0,1,1,1,1,0,1]
+options         [0,1,0,0,0,0,1,1,1,0,0,0]
 %description (T/F):
 %Entry (1)  scan 1 refl kml object
 %Entry (2)  scan 2 refl kml object
