--- a/process/etc/process.config
+++ b/process/etc/process.config
@@ -29,14 +29,9 @@ hist_oldest      2016_11_08
 hist_newest      2016_11_08
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    99
+radar_id_list    all
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
 %Option (2)    ##: single number (REQUIRED FOR CLIMATOLOGY)
 %Option (3)    vector
-<<<<<<< HEAD
-%
-=======
-%
->>>>>>> 064cc3569e2cf68da7b1e3875a7da0acab1eb7ca
