--- a/etc/global.config
+++ b/etc/global.config
@@ -5,8 +5,9 @@ min_lat                 -9.7      %northern lat of national domain
 min_lon                 112       %western lon of national domain
 dist_y_km               3925      %km to southern edge of national domain
 dist_x_km               4775      %km to eastern edge of national domain
+h_grid                  1         %grid size
 alt_vec                 [0.5,1,1.5,2,2.5,3,3.5,4,4.5,5,5.5,6,6.5,7,7.5,8,8.5,9,9.5,10,10.5,11,11.5,12,12.5,13,13.5,14,14.5,15,15.5,16,17,18,19,20]  %vertical steps
-r_mask_rng              200       %km from radar
+radar_mask_rng          200       %km from radar
 %transform constants
 earth_rad               6371      %km
 ke                      4/3       %earth model
@@ -15,6 +16,8 @@ elv_min                 0.5       %elv deg
 elv_max                 32        %elv deg
 rng_min                 1         %km
 rng_max                 150       %km
+%signficant refl check
+sig_refl_ppi_no         2         %ppi number for sig refl check
 %mobile radar grid config
 mobile_v_grid           0.25      %vertical grid res (km)
 mobile_v_rng            20        %vertical grid range (km)
@@ -24,7 +27,7 @@ mobile_max_elv          45        %max elevation angle
 mobile_id               99
 mobile_lat              -27.48117 
 mobile_lon              152.56342
-mobile_elv              0.202     %km
+mobile_alt              0.202     %km
 %DATA OPTIONS
 min_dbz                 -32        %min negative of dbz values to set to transparent
 max_dbz                 96         %max of dbz values (128-32)
@@ -42,7 +45,6 @@ inner_alpha            0           %alpha for inner collada isosurface
 outer_alpha            0.5         %alpha for outer collada isosurface
 %
 %IDENTIFCATION OPTIONS
-cart_erode_radius      1           %eroision radius for cart_interpol6 significant convection identification
 ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
