data prep running on new bom server

--- a/prep_bomradar/etc/prep.config
+++ b/prep_bomradar/etc/prep.config
@@ -10,13 +10,13 @@ local_path      /WeatherShare/odimh5_archive/
 %
 s3_path         s3://roames-wxradar-archive/odimh5_archive/
 %
-ftp_address     ftp.bom.gov.au
+ftp_address     ftp-reg.cloud.bom.gov.au
 %
-ftp_un          anonymous
+ftp_un          bom776
 %
-ftp_pass        j.soderholm@uq.edu.au
+ftp_pass        Bo7A74o2
 %
-ftp_path        register/bom517/benAWrij4/radar
+ftp_path        radar
 %
 %oldest filename to keep in ftp_latest_vol.mat
 ftp_oldest      -30
