added pushover service to prep process and kml

--- a/etc/global.config
+++ b/etc/global.config
@@ -89,3 +89,5 @@ odimh5_ddb_table      wxradar_odimh5_index
 storm_ddb_table       wxradar_storm_index
 eraint_ddb_table      wxradar-eraint-fzlvl
 staging_ddb_table     wxradar_realtime_staging
+%pushover
+pushover_flag         1
