new vol regridding integrated in processing

--- a/etc/global.config
+++ b/etc/global.config
@@ -1,12 +1,14 @@
 %WeatherVis Config File
 %
 %GRID OPTIONS
+force_transform_update  0         %flag to force transform regeneration
 min_lat                 -9.7      %northern lat of national domain
 min_lon                 112       %western lon of national domain
 dist_y_km               3925      %km to southern edge of national domain
 dist_x_km               4775      %km to eastern edge of national domain
-h_grid                  1         %grid size
-alt_vec                 [0.5,1,1.5,2,2.5,3,3.5,4,4.5,5,5.5,6,6.5,7,7.5,8,8.5,9,9.5,10,10.5,11,11.5,12,12.5,13,13.5,14,14.5,15,15.5,16,17,18,19,20]  %vertical steps
+h_grid                  1         %horizontal grid size
+v_grid                  0.5       %vertical grid size
+v_tops                  20        %horizontal grid tops
 radar_mask_rng          200       %km from radar
 %transform constants
 earth_rad               6371      %km
@@ -29,10 +31,10 @@ mobile_lat              -27.48117
 mobile_lon              152.56342
 mobile_alt              0.202     %km
 %DATA OPTIONS
-min_dbz                 -32        %min negative of dbz values to set to transparent
-max_dbz                 96         %max of dbz values (128-32)
-min_vel                 -71        %min vel value to set to transparent
-max_vel                 70         %max of vel values
+min_dbzh                -32        %min negative of dbz values to set to transparent
+max_dbzh                96         %max of dbz values (128-32)
+min_vradh               -71        %min vel value to set to transparent
+max_vradh               70         %max of vel values
 min_n_groups            4          %minimum number of groups in a h5 file to contiune pass QA
 %
 %ISOSURFACE OPTIONS
@@ -49,7 +51,7 @@ ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
 ewt_del                1           %Quantisation refl scaling 
-ewt_saliency           50          %min areal extent threshold (km) DEFAULT 20, was 15
+ewt_saliency           20          %min areal extent threshold (km) DEFAULT 20, was 15
 ewt_kernel_size        9           %smoothing kernel (pixels)
 ewt_max_depth          10          %maximum hlevel depth search (units of Q) DEFAULT 10
 ewt_refl_h             4           %level to extract refl data from vol (h)
