--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -7,7 +7,7 @@ local_src_root /WeatherShare/odimh5_archive/
 %
 s3_src_root    s3://roames-wxradar-archive/odimh5_archive/
 %
-local_dest_flag 0
+local_dest_flag 1
 %
 local_dest_root /WeatherShare/storm_archive/
 %
@@ -24,12 +24,12 @@ realtime_offset -1
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      2016_11_08
+hist_oldest      2014_11_27
 %yyyy_mm_dd : oldest time to process
-hist_newest      2016_11_08
+hist_newest      2014_11_27
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    all
+radar_id_list    50
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
