process upgrade complete with new regridding

--- a/etc/global.config
+++ b/etc/global.config
@@ -81,15 +81,15 @@ axis_scaling          1           %nowcast axis scaling
 r_tfmt                yyyymmdd_HHMMSS            %s3 database date format
 ddb_tfmt              yyyy-mm-ddTHH:MM:SS        %ddb date format
 ge_tfmt               yyyy-mm-ddTHH:MM:SSZ       %Google's date format
+ddb_dateid_tfmt       ddmmyyyy                   %ddb date_id format for storm objects
 %
 %GLOBAL SCALING FACTOR
-stats_scale           10                        %number to divide stats by before rounding
-geo_scale             10000                     %number to divide geo by before rounding
 r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
 %dynamodb table name
 odimh5_ddb_table      wxradar_odimh5_index
-storm_ddb_table       wxradar_storm_index
+storm_ddb_table       wxradar_storm2_index
 eraint_ddb_table      wxradar-eraint-fzlvl
+clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
 staging_ddb_table     wxradar_realtime_staging
 %pushover
 pushover_flag         1
