--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -1,13 +1,13 @@
 %PROCESS CONFIG FILE
 %WHAT: controls the input parameters of the wv_process module
 %
-local_src_flag  1
+%local_src_flag  0
 %
-local_src_root /WeatherShare/odimh5_archive/
+%local_src_root /WeatherShare/odimh5_archive/
 %
 s3_src_root    s3://roames-wxradar-archive/odimh5_archive/
 %
-local_dest_flag 1
+local_dest_flag 0
 %
 local_dest_root /WeatherShare/storm_archive/
 %
@@ -29,7 +29,7 @@ hist_oldest      2014_11_27
 hist_newest      2014_11_27
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    50
+radar_id_list    08
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
