half way through implementing new features in kml

--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -29,9 +29,14 @@ hist_oldest      2014_11_27
 hist_newest      2014_11_27
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    08
+%SITE
+%
+radar_id_list    50
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
 %Option (2)    ##: single number (REQUIRED FOR CLIMATOLOGY)
 %Option (3)    vector
+%
+% ERROR NOTIFICATION
+pushover_flag   1
