--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -9,36 +9,34 @@ s3_odimh5_src_root       s3://roames-wxradar-archive/odimh5_archive/
 s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
-local_dest_flag 1
-local_dest_root /WeatherShare/kml_uqxpol_demo/
-s3_dest_root    s3://roames-wxradar-kml/kml_demo/
-s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
-%s3_dest_root    s3://roames-wxradar-kml/kml_realtime/
-%s3_public_root  https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
+local_dest_flag          1
+local_dest_root          /WeatherShare/kml_uqxpol_demo/
+s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
+s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 % RESTART OPTIONS
-save_object_struct    1                  %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
+save_object_struct       0     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
 %
 %FILE STRUCTURE OPTIONS
-overlays_path         overlays/
-scan_obj_path         scan_obj/
-track_obj_path        track_obj/
-cell_obj_path         cell_obj/
-download_path         /tmp/h5_download/
+overlays_path            overlays/
+scan_obj_path            scan_obj/
+track_obj_path           track_obj/
+cell_obj_path            cell_obj/
+download_path            /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest      2016-11-08T05:00:00
+hist_oldest              2014-11-27T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest      2016-11-08T06:00:00
+hist_newest              2014-11-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
-realtime_kml     0
-realtime_length  -1          %hours
+realtime_kml             0
+realtime_length          -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list    99
+radar_id_list           50
 %site description
 %overrides the zone setting
 %Option (1)    all
@@ -63,7 +61,7 @@ ppi_dbz_mask          30                %gatemask which is applied to reflectivi
 %
 % KML LAYER OPTIONS
 %                1 2 3 4 5 6 7 8 9 10
-options         [0,1,0,0,1,1,1,1,0,1]
+options               [0,1,0,0,1,1,1,1,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
@@ -72,6 +70,10 @@ options         [0,1,0,0,1,1,1,1,0,1]
 %Entry (5)  inner isosurface kml object
 %Entry (6)  outer isosurface kml object
 %Entry (7)  storm stats balloon object
+%
+% ERROR NOTIFICATION
+%
+pushover_flag   1
 %Entry (8) tracks path kml object
 %Entry (9) swaths kml object
 %Entry (10) nowcast swaths kml objects
