minor changes for videos

--- a/wv_process/etc/process.config
+++ b/wv_process/etc/process.config
@@ -13,7 +13,7 @@ local_dest_root /WeatherShare/storm_archive/
 %
 s3_dest_root    s3://roames-wxradar-archive/storm_archive/
 %
-realtime_flag    1
+realtime_flag    0
 %description: controls process mode:
 %Realtime: uses ftp index (.h5), realtime GFS forecast temp data and loops
 %Historical: generates own odimh5 list (.h5.tar), uses ERA-Intrim data and does not loop
@@ -24,12 +24,12 @@ realtime_offset -1
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      1999_01_01
+hist_oldest      2014_11_27
 %yyyy_mm_dd : oldest time to process
-hist_newest      2016_06_30
+hist_newest      2014_11_27
 %yyyy_mm_dd : newest time to process
 %
-radar_id_list    all
+radar_id_list    66
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
