kml ppi scans working

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 */tmp/
 */build/
 *~
-roames_kml/tmp/
-roames_kml/build/
-process/tmp/
-process/build/
-prep_bomradar/tmp/
-prep_bomradar/build/
-dev/transforms/
-etc/pushover.token
+rwx_kml/tmp/
+rwx_kml/build/
+rwx_process/tmp/
+rwx_process/build/
+rwx_prep_bomradar/tmp/
+rwx_prep_bomradar/build/
+
