--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -31,7 +31,8 @@ hist_newest      2014_11_27
 %
 %SITE
 %
-radar_id_list    66
+radar_id_list           66
+force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
