--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -10,7 +10,7 @@ s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive/
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /WeatherShare/kml_uqxpol_demo/
+local_dest_root          /WeatherShare/kml_demo/
 s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
@@ -19,7 +19,7 @@ save_object_struct       0     %triggers save of object_struct during realtime p
 %
 %FILE STRUCTURE OPTIONS
 overlays_path            overlays/
-scan_obj_path            scan_obj/
+ppi_obj_path             ppi_obj/
 track_obj_path           track_obj/
 cell_obj_path            cell_obj/
 download_path            /tmp/h5_download/
@@ -37,6 +37,7 @@ realtime_length          -1          %hours
 %
 %SITE OPTIONS
 radar_id_list           50
+force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
 %Option (1)    all
@@ -53,15 +54,15 @@ iso_maxLodPixels      -1          %upper limit on number of pixels an object sca
 max_ge_alt            20000       %upper limit for ge alt in networklinks    
 %
 %KML OPTIONS
-coverage_range        150               %coverage rings distance in km
+coverage_range        200               %coverage rings distance in km
 max_vis_trck_length   20                %length of storm track colormap
 xsec_alt              [3000,6000]       %xsection altitude in m
-ppi_sweep             1                 %starting from 1st sweep = 1
-ppi_dbz_mask          30                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
+ppi_sweep             2                 %starting from 1st sweep = 1
+ppi_dbzh_mask         20                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
 %
 % KML LAYER OPTIONS
 %                1 2 3 4 5 6 7 8 9 10
-options               [0,1,0,0,1,1,1,1,0,1]
+options               [1,0,0,0,1,1,1,1,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
