--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -27,7 +27,7 @@ download_path            /tmp/h5_download/
 % HISTORICAL OPTIOS
 hist_oldest              2014-11-27T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2014-11-27T06:00:00
+hist_newest              2014-11-27T09:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
@@ -36,7 +36,7 @@ realtime_length          -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list           28,50
+radar_id_list           [28,50,08]
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
