adaptive masking complete

--- a/etc/global.config
+++ b/etc/global.config
@@ -8,15 +8,11 @@ dist_x_km               4775      %km to eastern edge of national domain
 h_grid                  1         %horizontal grid size
 v_grid                  0.5       %vertical grid size
 v_tops                  20        %horizontal grid tops
-radar_mask_rng          200       %km from radar
+radar_mask_rng          300       %km from radar
+radar_mask_time         12        %minutes. time in past to check for overlapping radars
 %transform constants
 earth_rad               6371      %km
 ke                      4/3       %earth model
-%bounding
-elv_min                 0.5       %elv deg
-elv_max                 32        %elv deg
-rng_min                 1         %km
-rng_max                 200       %km
 %signficant refl check
 sig_refl_ppi_no         2         %ppi number for sig refl check
 %mobile radar grid config
@@ -85,7 +81,7 @@ ddb_dateid_tfmt       ddmmyyyy                   %ddb date_id format for storm o
 %GLOBAL SCALING FACTOR
 r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
 %dynamodb table name
-odimh5_ddb_table      wxradar_odimh5_index
+odimh5_ddb_table      wxradar_odimh52_index
 storm_ddb_table       wxradar_storm2_index
 eraint_ddb_table      wxradar-eraint-fzlvl
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
