--- a/etc/global.config
+++ b/etc/global.config
@@ -1,12 +1,12 @@
 %WeatherVis Config File
 %
 %GRID OPTIONS
-min_lat                 -9        %northern lat of national domain
+min_lat                 -45.8     %southern lat of national domain
+max_lat                 -9        %northern lat of national domain
 min_lon                 111       %western lon of national domain
-dist_y_km               4100      %km to southern edge of national domain
-dist_x_km               5000      %km to eastern edge of national domain
-h_grid                  1         %horizontal grid size
-v_grid                  0.5       %vertical grid size
+max_lon                 156.3     %eastern lon of national domain
+h_grid                  0.01      %horizontal grid size (deg)
+v_grid                  0.5       %vertical grid size (km)
 v_tops                  20        %horizontal grid tops
 radar_mask_rng          300       %km from radar
 radar_mask_time         12        %minutes. time in past to check for overlapping radars
