--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -25,9 +25,9 @@ cell_obj_path            cell_obj/
 download_path            /tmp/h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest              2014-11-27T07:00:00
+hist_oldest              2014-11-27T06:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2014-11-27T09:00:00
+hist_newest              2014-11-27T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
@@ -36,8 +36,8 @@ realtime_length          -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list           [08,28,50,66]
-force_transform_update  0         %flag to force transform regeneration
+radar_id_list           [66,28]
+force_transform_update  1         %flag to force transform regeneration
 %site description
 %overrides the zone setting
 %Option (1)    all
@@ -59,6 +59,7 @@ max_vis_trck_length   20                %length of storm track colormap
 xsec_alt              [3000,6000]       %xsection altitude in m
 ppi_sweep             3                 %starting from 1st sweep = 1
 ppi_dbzh_mask         10                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
+ppi_resize_scale      5                 %resize factor for ppi images
 %
 % KML LAYER OPTIONS
 %                1 2 3 4 5 6 7 8 9 10
