--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -10,7 +10,7 @@ s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive2/
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /WeatherShare/kml_demo/
+local_dest_root          /home/meso/roames_weather_kml/kml_demo/
 s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
@@ -36,7 +36,7 @@ realtime_length          -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list           [66,28]
+radar_id_list           [08,28,50,66]
 force_transform_update  1         %flag to force transform regeneration
 %site description
 %overrides the zone setting
