tracking adaption for new release complete

--- a/etc/global.config
+++ b/etc/global.config
@@ -59,7 +59,8 @@ min_track_cells       3           %minimum of unique cells for kml track generat
 min_track_len         2           %minimum track history used for projecting centroid in wdss_tracking
 min_other_track_cells 3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
 max_track_len         4           %maximum track history used for projecting centroid in wdss_tracking
-max_storm_speed       80          %maximum speed of a storm, used to check tracking cell search radius (km/h)
+max_storm_speed       80          %NOT CURRENTLY USED maximum speed of a storm, used to check tracking cell search radius (km/h)
+max_search_distance   13.5        %maximum tracking search radius from cell centroid (km)
 azi_diff              90          %maximum allowable difference between the proj_azi and the tracked azi (deg)
 %
 %FORECASTING OPTIONS
