--- a/etc/global.config
+++ b/etc/global.config
@@ -46,10 +46,10 @@ ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
 ewt_del                1           %Quantisation refl scaling 
-ewt_saliency           20          %min areal extent threshold (km) DEFAULT 20, was 15
-ewt_kernel_size        9           %smoothing kernel (pixels)
+ewt_saliency           50          %min areal extent threshold (km) DEFAULT 20, was 15
+ewt_kernel_size        3           %smoothing kernel (pixels)
 ewt_max_depth          10          %maximum hlevel depth search (units of Q) DEFAULT 10
-ewt_refl_h             4           %level to extract refl data from vol (h)
+ewt_refl_h             4           %level to extract refl data from vol (h index)
 tops_thresh            18          %target dbz value for calculating tops
 severe_dbz_thresh      50          %target dbz value for calculating severe dbz surface height
 vil_upper_limit        55          %upper limit for vil calculatations (dBZ), negates hail spike effects
@@ -61,7 +61,7 @@ min_other_track_cells 3           %minimum number of other tracked cells which c
 max_track_len         4           %maximum track history used for projecting centroid in wdss_tracking
 max_storm_speed       80          %NOT CURRENTLY USED maximum speed of a storm, used to check tracking cell search radius (km/h)
 max_search_distance   13.5        %maximum tracking search radius from cell centroid (km)
-azi_diff              90          %maximum allowable difference between the proj_azi and the tracked azi (deg)
+azi_diff              60          %maximum allowable difference between the proj_azi and the tracked azi (deg)
 %
 %FORECASTING OPTIONS
 track_merge_t_offset   15         %the max time offset from the start/end of a day to find start/end cells for merging
@@ -86,6 +86,6 @@ odimh5_ddb_table      wxradar_odimh52_index
 storm_ddb_table       wxradar_storm2_index
 eraint_ddb_table      wxradar-eraint-fzlvl
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
-staging_ddb_table     wxradar_realtime_staging
+staging_ddb_table     wxradar_realtime_staging_testing
 %pushover
 pushover_flag         1
