prep and process stable for deployment

--- a/rwx_kml/etc/kml.config
+++ b/rwx_kml/etc/kml.config
@@ -10,9 +10,9 @@ s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive2/
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /home/meso/roames_weather_kml/kml_demo/
-s3_dest_root             s3://roames-wxradar-kml/kml_demo/
-s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
+local_dest_root          /home/meso/roames_weather_kml/kml_demo_realtime/
+s3_dest_root             s3://roames-wxradar-kml/kml_demo_realtime/
+s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo_realtime/
 %
 % RESTART OPTIONS
 save_object_struct       0     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
@@ -22,7 +22,7 @@ overlays_path            overlays/
 ppi_obj_path             ppi_obj/
 track_obj_path           track_obj/
 cell_obj_path            cell_obj/
-download_path            /tmp/h5_download/
+download_path            /tmp/kml_h5_download/
 %
 % HISTORICAL OPTIOS
 hist_oldest              2015-10-27T07:00:00
@@ -31,13 +31,13 @@ hist_newest              2015-10-27T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 % REALTIME OPTIONS
-realtime_kml             0
+realtime_kml             1
 realtime_length          -1          %hours
 %
 %
 %SITE OPTIONS
-radar_id_list           [66]
-force_transform_update  1         %flag to force transform regeneration
+radar_id_list           all
+force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
 %Option (1)    all
