--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -13,7 +13,7 @@ local_dest_root /WeatherShare/storm_archive2/
 %
 s3_dest_root    s3://roames-wxradar-archive/storm_archive2/
 %
-realtime_flag    0
+realtime_flag    1
 %description: controls process mode:
 %Realtime: uses ftp index (.h5), realtime GFS forecast temp data and loops
 %Historical: generates own odimh5 list (.h5.tar), uses ERA-Intrim data and does not loop
@@ -31,7 +31,7 @@ hist_newest      2015_10_27
 %
 %SITE
 %
-radar_id_list           08
+radar_id_list           all
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
