--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -22,7 +22,7 @@ overlays_path            overlays/
 ppi_obj_path             ppi_obj/
 track_obj_path           track_obj/
 cell_obj_path            cell_obj/
-download_path            /tmp/kml_h5_download/
+download_path            /tmp/vis_h5_download/
 %
 % HISTORICAL OPTIOS
 hist_oldest              2015-10-27T07:00:00
