--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -41,3 +41,4 @@ force_transform_update  0         %flag to force transform regeneration
 %
 % ERROR NOTIFICATION
 pushover_flag   1
+pushover_tag    Sydney_Climatology
