--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -1,13 +1,6 @@
 %KML CONFIG FILE
 %WHAT: controls the input parameters of the KML config module
 %
-% SOURCE OPTIONS
-local_src_flag           0
-local_odimh5_src_root    /WeatherShare/odimh5_archive/
-local_stormh5_src_root   /WeatherShare/storm_archive2/
-s3_odimh5_src_root       s3://roames-wxradar-archive/odimh5_archive/
-s3_stormh5_src_root      s3://roames-wxradar-archive/storm_archive2/
-%
 % DESTINATION OPTIONS
 local_dest_flag          1
 local_dest_root          /home/meso/roames_weather_kml/kml_demo_realtime/
@@ -15,7 +8,7 @@ s3_dest_root             s3://roames-wxradar-kml/kml_demo_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo_realtime/
 %
 % REALTIME OPTIONS
-realtime_kml             0
+realtime_kml             1
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
@@ -35,7 +28,7 @@ hist_newest              2015-10-27T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           [50,28]
+radar_id_list           all
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
